refactor:  update system structure to align with frontend requirements
- change the relationship between product and category
- get more quantity in stock of each variant
- add user filter